--- a/index.html
+++ b/index.html
@@ -5,157 +5,204 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 <title>Pratim & Debjani's Wedding Menu</title>
 <style>
-*{box-sizing:border-box;margin:0;padding:0}
-
-body{
-  font-family:'Georgia',serif;
-  background:linear-gradient(120deg,#fef6f9,#fceabb,#fff4f7);
-  background-size:300% 300%;
-  animation:softGradient 15s ease-in-out infinite;
-  color:#333;
-  min-height:100vh;
-  display:flex;
-  flex-direction:column;
-  align-items:center;
-  justify-content:flex-start;
-  overflow-x:hidden;
-  overflow-y:auto;
-  position:relative;
+* {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
 }
 
-@keyframes softGradient{
-  0%{background-position:0% 50%;}
-  50%{background-position:100% 50%;}
-  100%{background-position:0% 50%;}
+body {
+  font-family: 'Georgia', serif;
+  color: #333;
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: flex-start;
+  overflow-x: hidden;
+  overflow-y: auto;
+  position: relative;
+  background: linear-gradient(to bottom right, #fef6f9, #fceabb); /* elegant pastel background */
 }
 
-/* Bride photo background */
-main::before{
-  content:"";
-  position:absolute;
-  top:0;left:0;
-  width:100%;height:100%;
-  background:url("bride.jpg") center/cover no-repeat;
-  opacity:0.55;
-  filter:blur(0.5px);
-  z-index:0;
+/* Background layer that holds bride photo without interference */
+main::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: url("bride.jpg") center/cover no-repeat;
+  opacity: 0.5;
+  filter: blur(0.5px);
+  z-index: 0;
 }
 
-canvas{
-  position:fixed;
-  top:0;left:0;
-  width:100%;height:100%;
-  pointer-events:none;
-  z-index:9999;
+/* Canvas for fireworks (topmost layer) */
+canvas {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  pointer-events: none;
+  z-index: 9999;
 }
 
-header{
-  background:transparent;
-  color:#fff;
-  width:100%;
-  text-align:center;
-  padding:2rem 1rem 1rem;
-  position:relative;
-  z-index:2;
-  text-shadow:1px 1px 3px rgba(0,0,0,0.4);
-}
-header h1{
-  font-size:2.2rem;
-  margin:0;
-  display:inline-block;
-  background:pink;                 /* pink background */
-  border:4px solid gold;           /* golden border */
-  padding:0.5rem 1rem;
-  border-radius:12px;
-  box-shadow:0 0 10px rgba(255,215,0,0.7);
-}
-header p{
-  font-size:1.1rem;
-  margin-top:.5rem;
-  color:#002366;
-}
-header .sub-info{
-  font-size:.85rem;
-  color:#002366;
-  margin-top:.3rem;
+/* Header styling */
+header {
+  background: transparent;
+  color: #fff;
+  width: 100%;
+  text-align: center;
+  padding: 2rem 1rem 1rem;
+  position: relative;
+  z-index: 3;
+  text-shadow: 1px 1px 3px rgba(0, 0, 0, 0.4);
 }
 
-main{
-  border-radius:16px;
-  padding:1.5rem;
-  max-width:600px;
-  width:95%;
-  margin:1.5rem auto;
-  position:relative;
-  z-index:2;
-  background:rgba(255,255,255,0.9);
-  backdrop-filter:blur(8px);
-  box-shadow:0 4px 20px rgba(0,0,0,0.25);
+header h1 {
+  font-size: 2.2rem;
+  margin: 0;
+  display: inline-block;
+  background: pink;
+  border: 4px solid gold;
+  padding: 0.5rem 1rem;
+  border-radius: 12px;
+  box-shadow: 0 0 10px rgba(255, 215, 0, 0.7);
 }
 
-h2{
-  color:#002366;
-  text-align:center;
-  font-size:1.8rem;
-  text-shadow:1px 1px 2px #fff;
+header p {
+  font-size: 1.1rem;
+  margin-top: 0.5rem;
+  color: #0044cc;
 }
 
-.menu-section{
-  margin-bottom:1.5rem;
-  position:relative;
-  z-index:2;
-}
-.menu-section h3{
-  color:#d2691e;
-  border-bottom:1px solid #ccc;
-  padding-bottom:.25rem;
-  margin-bottom:.5rem;
-  font-size:1.2rem;
-  text-shadow:1px 1px 2px #fff;
+header .sub-info {
+  font-size: 0.9rem;
+  color: #0044cc;
+  margin-top: 0.3rem;
 }
 
-ul{
-  list-style:none;
-  padding-left:0;
-  margin:0;
-  position:relative;
-  z-index:2;
-}
-li{
-  position:relative;
-  padding-left:1.5rem;
-  margin-bottom:.3rem;
-  font-size:1.05rem;
-  color:black;
-  text-shadow:1px 1px 2px #fff;
-}
-li::before{
-  content:"●";
-  position:absolute;
-  left:0;
-  color:#d2691e;
+/* Frosted white glass main panel */
+main {
+  border-radius: 20px;
+  padding: 1.8rem;
+  max-width: 650px;
+  width: 95%;
+  margin: 2rem auto;
+  position: relative;
+  z-index: 2;
+  background: rgba(255, 255, 255, 0.92);
+  backdrop-filter: blur(12px);
+  box-shadow: 0 6px 25px rgba(0, 0, 0, 0.25);
 }
 
-footer{
-  margin-top:auto;
-  text-align:center;
-  padding:1rem;
-  position:relative;
-  z-index:2;
+/* Titles */
+h2 {
+  color: #002366;
+  text-align: center;
+  font-size: 1.9rem;
+  margin-bottom: 1rem;
+  text-shadow: 1px 1px 2px #fff;
 }
-footer .thank-you{color:black}
-footer .thank-you .small-text{font-size:.7rem;display:block;margin-bottom:.3rem}
-footer .thank-you .big-text{font-size:1.2rem;font-weight:bold;letter-spacing:1px;text-transform:uppercase}
-footer .copyright{font-size:.85rem;color:#fff}
 
-@media(max-width:480px){
-  header h1{font-size:1.8rem}
-  main{padding:1rem}
-  h2{font-size:1.5rem}
-  .menu-section h3{font-size:1.1rem}
-  li{font-size:1rem}
-  footer .thank-you .small-text{font-size:.6rem}
-  footer .thank-you .big-text{font-size:1rem}
+/* Menu sections */
+.menu-section {
+  margin-bottom: 1.5rem;
+  position: relative;
+  z-index: 2;
+}
+
+.menu-section h3 {
+  color: #d2691e;
+  border-bottom: 1px solid #ccc;
+  padding-bottom: 0.25rem;
+  margin-bottom: 0.5rem;
+  font-size: 1.3rem;
+  text-shadow: 1px 1px 2px #fff;
+}
+
+/* Menu list */
+ul {
+  list-style: none;
+  padding-left: 0;
+  margin: 0;
+  position: relative;
+  z-index: 2;
+}
+
+li {
+  position: relative;
+  padding-left: 1.5rem;
+  margin-bottom: 0.3rem;
+  font-size: 1.1rem;
+  color: black;
+  text-shadow: 1px 1px 2px #fff;
+}
+
+li::before {
+  content: "●";
+  position: absolute;
+  left: 0;
+  color: #d2691e;
+}
+
+/* Footer */
+footer {
+  margin-top: auto;
+  text-align: center;
+  padding: 1rem;
+  position: relative;
+  z-index: 2;
+}
+
+footer .thank-you {
+  color: black;
+}
+
+footer .thank-you .small-text {
+  font-size: 0.7rem;
+  display: block;
+  margin-bottom: 0.3rem;
+}
+
+footer .thank-you .big-text {
+  font-size: 1.2rem;
+  font-weight: bold;
+  letter-spacing: 1px;
+  text-transform: uppercase;
+}
+
+footer .copyright {
+  font-size: 0.85rem;
+  color: #fff;
+}
+
+/* Mobile friendly adjustments */
+@media (max-width: 480px) {
+  header h1 {
+    font-size: 1.8rem;
+  }
+  main {
+    padding: 1rem;
+  }
+  h2 {
+    font-size: 1.5rem;
+  }
+  .menu-section h3 {
+    font-size: 1.1rem;
+  }
+  li {
+    font-size: 1rem;
+  }
+  footer .thank-you .small-text {
+    font-size: 0.6rem;
+  }
+  footer .thank-you .big-text {
+    font-size: 1rem;
+  }
 }
 </style>
 </head>
@@ -212,48 +259,94 @@ footer .copyright{font-size:.85rem;color:#fff}
 </footer>
 
 <script>
-const canvas=document.getElementById('fireworks');
-const ctx=canvas.getContext('2d');
-canvas.width=window.innerWidth;
-canvas.height=window.innerHeight;
-let fireworks=[],particles=[],sparkles=[];
-function random(min,max){return Math.random()*(max-min)+min;}
+const canvas = document.getElementById('fireworks');
+const ctx = canvas.getContext('2d');
+canvas.width = window.innerWidth;
+canvas.height = window.innerHeight;
+let fireworks = [], particles = [], sparkles = [];
 
-class Firework{
-  constructor(x,y,targetY){this.x=x;this.y=y;this.targetY=targetY;this.speed=random(2,4);this.exploded=false;}
-  update(){if(this.y>this.targetY)this.y-=this.speed;else if(!this.exploded){this.explode();this.exploded=true;}}
-  explode(){for(let i=0;i<30;i++)particles.push(new Particle(this.x,this.y));}
-  draw(){if(!this.exploded){ctx.beginPath();ctx.arc(this.x,this.y,2,0,Math.PI*2);ctx.fillStyle='white';ctx.fill();}}
+function random(min, max) {
+  return Math.random() * (max - min) + min;
 }
 
-class Particle{
-  constructor(x,y){this.x=x;this.y=y;this.speed=random(1,5);this.angle=random(0,Math.PI*2);this.gravity=0.05;this.alpha=1;this.color=`hsl(${random(0,360)},100%,50%)`;}
-  update(){this.speed*=0.98;this.x+=Math.cos(this.angle)*this.speed;this.y+=Math.sin(this.angle)*this.speed+this.gravity;this.alpha-=0.02;}
-  draw(){ctx.globalAlpha=this.alpha;ctx.beginPath();ctx.arc(this.x,this.y,2,0,Math.PI*2);ctx.fillStyle=this.color;ctx.fill();ctx.globalAlpha=1;}
+class Firework {
+  constructor(x, y, targetY) {
+    this.x = x;
+    this.y = y;
+    this.targetY = targetY;
+    this.speed = random(2, 4);
+    this.exploded = false;
+  }
+  update() {
+    if (this.y > this.targetY) this.y -= this.speed;
+    else if (!this.exploded) {
+      this.explode();
+      this.exploded = true;
+    }
+  }
+  explode() {
+    for (let i = 0; i < 30; i++) particles.push(new Particle(this.x, this.y));
+  }
+  draw() {
+    if (!this.exploded) {
+      ctx.beginPath();
+      ctx.arc(this.x, this.y, 2, 0, Math.PI * 2);
+      ctx.fillStyle = 'white';
+      ctx.fill();
+    }
+  }
 }
 
-class Sparkle{
-  constructor(x,y){this.x=x+random(-80,80);this.y=y+random(-10,10);this.alpha=1;this.size=random(1,3);}
-  update(){this.alpha-=0.03;}
-  draw(){ctx.globalAlpha=this.alpha;ctx.beginPath();ctx.arc(this.x,this.y,this.size,0,Math.PI*2);ctx.fillStyle='gold';ctx.fill();ctx.globalAlpha=1;}
+class Particle {
+  constructor(x, y) {
+    this.x = x;
+    this.y = y;
+    this.speed = random(1, 5);
+    this.angle = random(0, Math.PI * 2);
+    this.gravity = 0.05;
+    this.alpha = 1;
+    this.color = `hsl(${random(0, 360)}, 100%, 50%)`;
+  }
+  update() {
+    this.speed *= 0.98;
+    this.x += Math.cos(this.angle) * this.speed;
+    this.y += Math.sin(this.angle) * this.speed + this.gravity;
+    this.alpha -= 0.02;
+  }
+  draw() {
+    ctx.globalAlpha = this.alpha;
+    ctx.beginPath();
+    ctx.arc(this.x, this.y, 2, 0, Math.PI * 2);
+    ctx.fillStyle = this.color;
+    ctx.fill();
+    ctx.globalAlpha = 1;
+  }
 }
 
-function animate(){
-  ctx.clearRect(0,0,canvas.width,canvas.height);
-  if(Math.random()<0.05)fireworks.push(new Firework(random(50,canvas.width-50),canvas.height,random(100,canvas.height/2)));
-  fireworks.forEach((f,i)=>{f.update();f.draw();if(f.exploded)fireworks.splice(i,1);});
-  particles.forEach((p,i)=>{p.update();p.draw();if(p.alpha<=0)particles.splice(i,1);});
-  const title=document.getElementById('title');
-  const rect=title.getBoundingClientRect();
-  if(Math.random()<0.1)sparkles.push(new Sparkle(rect.left+rect.width/2,rect.top+rect.height/2));
-  sparkles.forEach((s,i)=>{s.update();s.draw();if(s.alpha<=0)sparkles.splice(i,1);});
+function animate() {
+  ctx.clearRect(0, 0, canvas.width, canvas.height);
+  if (Math.random() < 0.05)
+    fireworks.push(new Firework(random(50, canvas.width - 50), canvas.height, random(100, canvas.height / 2)));
+
+  fireworks.forEach((f, i) => {
+    f.update();
+    f.draw();
+    if (f.exploded) fireworks.splice(i, 1);
+  });
+
+  particles.forEach((p, i) => {
+    p.update();
+    p.draw();
+    if (p.alpha <= 0) particles.splice(i, 1);
+  });
+
   requestAnimationFrame(animate);
 }
 animate();
 
-window.addEventListener('resize',()=>{
-  canvas.width=window.innerWidth;
-  canvas.height=window.innerHeight;
+window.addEventListener('resize', () => {
+  canvas.width = window.innerWidth;
+  canvas.height = window.innerHeight;
 });
 </script>
 </body>
