--- a/index.html
+++ b/index.html
@@ -27,23 +27,20 @@ body{
   100%{background-position:0% 50%;}
 }
 
-/* Bride photo behind menu */
-#bride-photo{
-  content:"";
+/* Fireworks canvas */
+canvas{
   position:fixed;
   top:0;
   left:0;
   width:100%;
   height:100%;
-  background:url("bride.jpg") center/cover no-repeat;
-  opacity:0.45;
-  filter:blur(0.5px);
-  z-index:0;
+  pointer-events:none;
+  z-index:9999;
 }
 
 /* Floating golden sparkles behind menu */
 #sparkle-bg{
-  position:fixed;
+  position:absolute;
   top:0;left:0;width:100%;height:100%;overflow:hidden;pointer-events:none;z-index:1;
 }
 .sparkle{
@@ -57,17 +54,6 @@ body{
   0% {transform: translateY(0) scale(1); opacity:0.8;}
   50% {opacity:1;}
   100% {transform: translateY(-120vh) scale(1.3); opacity:0;}
-}
-
-/* Fireworks canvas */
-canvas{
-  position:fixed;
-  top:0;
-  left:0;
-  width:100%;
-  height:100%;
-  pointer-events:none;
-  z-index:9999;
 }
 
 /* Header */
@@ -96,7 +82,7 @@ header h1{
 header p{ font-size:1.1rem; margin-top:0.5rem; color:#002366;}
 header .sub-info{ font-size:0.9rem; color:#002366; margin-top:0.3rem;}
 
-/* Frosted menu panel */
+/* Frosted menu panel with bride photo */
 main{
   border-radius:22px;
   padding:2rem;
@@ -105,12 +91,25 @@ main{
   margin:2rem auto;
   position:relative;
   z-index:2;
-  background: rgba(255,255,255,0.93);
-  backdrop-filter: blur(14px);
+  background: rgba(255,255,255,0.85);
+  backdrop-filter: blur(12px);
   box-shadow:0 8px 30px rgba(0,0,0,0.3);
   border:2px solid rgba(255,215,0,0.6);
   overflow:hidden;
 }
+main::before{
+  content:"";
+  position:absolute;
+  top:0; left:0;
+  width:100%; height:100%;
+  background:url("bride.jpg") center/cover no-repeat;
+  opacity:0.35;
+  z-index:0;
+  border-radius:22px;
+}
+
+/* Menu text above photo */
+main *{position:relative; z-index:2;}
 
 /* Titles */
 h2{ color:#002366; text-align:center; font-size:2rem; margin-bottom:1rem; text-shadow:1px 1px 2px #fff;}
@@ -141,10 +140,7 @@ footer .divider{height:2px; width:80px; background:gold; margin:0.5rem auto 0.5r
 </head>
 <body>
 
-<div id="bride-photo"></div>
-<div id="sparkle-bg"></div>
 <canvas id="fireworks"></canvas>
-
 <header>
   <h1 id="title">Pratim 💙 Debjani</h1>
   <p>Thank you for sharing in the joy of our first meal as a married couple</p>
@@ -152,6 +148,7 @@ footer .divider{height:2px; width:80px; background:gold; margin:0.5rem auto 0.5r
 </header>
 
 <main>
+  <div id="sparkle-bg"></div>
   <h2>Serving Menu</h2>
   <div class="menu-section">
     <h3>Main Course</h3>
@@ -231,5 +228,6 @@ for(let i=0;i<sparkleCount;i++){
   sparkleBg.appendChild(s);
 }
 </script>
+
 </body>
 </html>
