--- a/index.html
+++ b/index.html
@@ -20,28 +20,16 @@ body{
   background-size:400% 400%;
   animation: shimmerBG 20s ease-in-out infinite;
 }
-/* shimmer background animation */
-@keyframes shimmerBG {
-  0%{background-position:0% 50%;}
-  50%{background-position:100% 50%;}
-  100%{background-position:0% 50%;}
-}
+@keyframes shimmerBG {0%{background-position:0% 50%;}50%{background-position:100% 50%;}100%{background-position:0% 50%;}}
 
 /* Fireworks canvas */
 canvas{
-  position:fixed;
-  top:0;
-  left:0;
-  width:100%;
-  height:100%;
-  pointer-events:none;
-  z-index:9999;
+  position:fixed; top:0; left:0; width:100%; height:100%; pointer-events:none; z-index:9999;
 }
 
 /* Floating golden sparkles behind menu */
 #sparkle-bg{
-  position:absolute;
-  top:0;left:0;width:100%;height:100%;overflow:hidden;pointer-events:none;z-index:1;
+  position:absolute; top:0; left:0; width:100%; height:100%; overflow:hidden; pointer-events:none; z-index:1;
 }
 .sparkle{
   position:absolute;
@@ -50,11 +38,7 @@ canvas{
   opacity:0.6;
   animation: floatSparkle linear infinite;
 }
-@keyframes floatSparkle{
-  0% {transform: translateY(0) scale(1); opacity:0.8;}
-  50% {opacity:1;}
-  100% {transform: translateY(-120vh) scale(1.3); opacity:0;}
-}
+@keyframes floatSparkle{0% {transform: translateY(0) scale(1); opacity:0.8;} 50% {opacity:1;} 100% {transform: translateY(-120vh) scale(1.3); opacity:0;}}
 
 /* Header */
 header{
@@ -65,20 +49,24 @@ header{
   z-index:3;
   text-shadow: 1px 1px 4px rgba(0,0,0,0.4);
 }
-header h1{
+.header-names{
   font-size:2.4rem;
-  display:inline-block;
-  background:#ffccd5;
-  border:5px solid gold;
-  padding:0.6rem 1.2rem;
-  border-radius:15px;
-  box-shadow:0 0 20px rgba(255,215,0,0.8);
-  animation: glowFrame 2s ease-in-out infinite alternate;
+  font-weight:bold;
 }
-@keyframes glowFrame{
-  0% {box-shadow:0 0 15px rgba(255,215,0,0.6);}
-  100% {box-shadow:0 0 25px rgba(255,215,0,1);}
+.header-names span{
+  text-shadow:0 0 10px;
 }
+.header-names .pratim, .header-names .debjani{
+  color:red;
+  animation: glowRed 2s ease-in-out infinite alternate;
+}
+.header-names .heart{
+  color:#00f;
+  animation: glowBlue 2s ease-in-out infinite alternate;
+}
+@keyframes glowRed{0%{text-shadow:0 0 8px #ff0000;}100%{text-shadow:0 0 18px #ff4444;}}
+@keyframes glowBlue{0%{text-shadow:0 0 8px #00f;}100%{text-shadow:0 0 18px #33f;}}
+
 header p{ font-size:1.1rem; margin-top:0.5rem; color:#002366;}
 header .sub-info{ font-size:0.9rem; color:#002366; margin-top:0.3rem;}
 
@@ -91,7 +79,7 @@ main{
   margin:2rem auto;
   position:relative;
   z-index:2;
-  background: rgba(255,255,255,0.85);
+  background: rgba(255,255,255,0.87); /* more visible bride photo */
   backdrop-filter: blur(12px);
   box-shadow:0 8px 30px rgba(0,0,0,0.3);
   border:2px solid rgba(255,215,0,0.6);
@@ -103,7 +91,7 @@ main::before{
   top:0; left:0;
   width:100%; height:100%;
   background:url("bride.jpg") center/cover no-repeat;
-  opacity:0.35;
+  opacity:0.45; /* slightly more visible */
   z-index:0;
   border-radius:22px;
 }
@@ -128,7 +116,7 @@ footer .divider{height:2px; width:80px; background:gold; margin:0.5rem auto 0.5r
 
 /* Mobile */
 @media(max-width:480px){
-  header h1{font-size:2rem}
+  header .header-names{font-size:2rem}
   main{padding:1.5rem}
   h2{font-size:1.6rem}
   .menu-section h3{font-size:1.15rem}
@@ -141,8 +129,11 @@ footer .divider{height:2px; width:80px; background:gold; margin:0.5rem auto 0.5r
 <body>
 
 <canvas id="fireworks"></canvas>
+
 <header>
-  <h1 id="title">Pratim 💙 Debjani</h1>
+  <div class="header-names">
+    <span class="pratim">Pratim</span> <span class="heart">💙</span> <span class="debjani">Debjani</span>
+  </div>
   <p>Thank you for sharing in the joy of our first meal as a married couple</p>
   <p class="sub-info">Every dish on this menu was chosen with Love. Cheers to Love and Laughter!</p>
 </header>
@@ -228,6 +219,5 @@ for(let i=0;i<sparkleCount;i++){
   sparkleBg.appendChild(s);
 }
 </script>
-
 </body>
 </html>
