--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@ footer .divider{height:2px; width:80px; background:gold; margin:0.5rem auto 0.5r
   <div class="menu-section">
     <h3>Main Course</h3>
     <ul>
-      <li>Chicken Drumstick</li>
+      <li>Chicken Drumstick / Paneer Butter Fry</li>
       <li>Salad & Sauce</li>
       <li>Rumali Roti</li>
       <li>Keema Chana Masala / Chana Paneer</li>
@@ -177,7 +177,7 @@ footer .divider{height:2px; width:80px; background:gold; margin:0.5rem auto 0.5r
 <footer>
   <div class="divider"></div>
   <p class="thank-you">
-    <span class="small-text">I can't tell you</span>
+    <span class="small-text">I am unable to advise you to</span>
     <span class="big-text">VISIT AGAIN</span>
   </p>
 </footer>
@@ -221,3 +221,4 @@ for(let i=0;i<sparkleCount;i++){
 </script>
 </body>
 </html>
+
