--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@ main{
   margin:2rem auto;
   position:relative;
   z-index:2;
-  background: rgba(255,255,255,0.87); /* more visible bride photo */
+  background: rgba(255,255,255,0.87);
   backdrop-filter: blur(12px);
   box-shadow:0 8px 30px rgba(0,0,0,0.3);
   border:2px solid rgba(255,215,0,0.6);
@@ -91,7 +91,7 @@ main::before{
   top:0; left:0;
   width:100%; height:100%;
   background:url("bride.jpg") center/cover no-repeat;
-  opacity:0.45; /* slightly more visible */
+  opacity:0.45;
   z-index:0;
   border-radius:22px;
 }
@@ -111,7 +111,7 @@ li::before{content:"●"; position:absolute; left:0; color:#d2691e;}
 footer{margin-top:auto; text-align:center; padding:1.2rem; position:relative; z-index:2;}
 footer .thank-you{color:black;}
 footer .thank-you .small-text{font-size:0.7rem;display:block;margin-bottom:0.3rem;}
-footer .thank-you .big-text{font-size:1.2rem;font-weight:bold;letter-spacing:1px;text-transform:uppercase;}
+footer .thank-you .big-text{font-size:1.4rem;font-weight:bold;letter-spacing:1px;text-transform:uppercase;} /* slightly bigger */
 footer .divider{height:2px; width:80px; background:gold; margin:0.5rem auto 0.5rem auto; border-radius:1px;}
 
 /* Mobile */
@@ -122,7 +122,7 @@ footer .divider{height:2px; width:80px; background:gold; margin:0.5rem auto 0.5r
   .menu-section h3{font-size:1.15rem}
   li{font-size:1rem}
   footer .thank-you .small-text{font-size:0.6rem}
-  footer .thank-you .big-text{font-size:1rem}
+  footer .thank-you .big-text{font-size:1.2rem}
 }
 </style>
 </head>
@@ -221,4 +221,3 @@ for(let i=0;i<sparkleCount;i++){
 </script>
 </body>
 </html>
-
